--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -39,6 +39,7 @@
     "zustand": "~5.0.0"
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@tailwindcss/postcss": "4.0.15",
     "@trivago/prettier-plugin-sort-imports": "~4.3.0",
     "@types/node": "~18.19.50",
