--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -22,6 +22,7 @@
     "@scaffold-ui/debug-contracts": "^0.1.2",
     "@scaffold-ui/hooks": "^0.1.2",
     "@tanstack/react-query": "~5.59.15",
+    "@worldcoin/idkit": "^2.4.2",
     "blo": "~1.2.0",
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
