--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -22,8 +22,9 @@
     "@scaffold-ui/debug-contracts": "^0.1.2",
     "@scaffold-ui/hooks": "^0.1.2",
     "@tanstack/react-query": "~5.59.15",
-    "@worldcoin/idkit": "^2.4.2",
-    "@worldcoin/idkit-core": "^2.1.0",
+    "@worldcoin/idkit": "^1.1.4",
+    "@worldcoin/idkit-core": "^1.3.0",
+    "@worldcoin/idkit-standalone": "^1.1.4",
     "blo": "~1.2.0",
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
