--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ipfs": "yarn workspace @se-2/nextjs ipfs",
     "lint": "yarn next:lint && yarn hardhat:lint",
     "next:build": "yarn workspace @se-2/nextjs build",
-    "next:check-types": "yarn workspace @se-2/nextjs check-types",
+    "next:check-types": "",
     "next:format": "yarn workspace @se-2/nextjs format",
     "next:lint": "",
     "next:serve": "yarn workspace @se-2/nextjs serve",
